# secure-delete

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
secure_delete/: __init__.py  core.py
tests/: test_secure_delete.py
